new package.json

--- a/my-lib-mvuradin/package.json
+++ b/my-lib-mvuradin/package.json
@@ -54,7 +54,7 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/my-lib-mvuradin.umd",
+  "main": "./dist/my-lib-mvuradin.umd.js",
   "module": "./dist/my-lib-mvuradin.es.js",
   "types": "./dist/index.d.ts",
   "exports": {
