--- a/Vite-project2/packages/my-lib-mvuradin/package.json
+++ b/Vite-project2/packages/my-lib-mvuradin/package.json
@@ -1,10 +1,10 @@
 {
   "name": "my-lib-mvuradin",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "watch": "webpack --watch --mode development",
@@ -54,11 +54,14 @@
   "files": [
     "dist"
   ],
-  "types": "./dist/index.d.ts",
+  "types": "./dist/index",
   "exports": {
     ".": {
       "import": "./dist/my-lib-mvuradin.es.js",
-      "require": "./dist/my-lib-mvuradin.umd.js"
+      "require": "./dist/my-lib-mvuradin.umd.js",
+      "types": "./dist/index.d.ts"
     }
-  }
+  },
+  "main": "./dist/my-lib-mvuradin.umd.js",
+  "module": "./dist/my-lib-mvuradin.es.js"
 }
